tests/ui/error-codes/E0308-4.stderr
error[E0308]: mismatched types
  --> $DIR/E0308-4.rs:4:15
   |
LL |     match x {
   |           - this expression has type `u8`
LL |         0u8..=3i8 => (),
   |         ---   ^^^ expected `u8`, found `i8`
   |         |
   |         this is of type `u8`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
